--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -233,3 +233,21 @@
     model: GT King
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: TV Bro/1.0 Mozilla/5.0 (Linux; Android 9; BLAUPUNKT 4K Android TV Build/PTO6.200304.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/88.0.4324.93 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: TV Bro
+    version: "1.0"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: Blaupunkt
+    model: 4K Android TV
+  os_family: Android
+  browser_family: Chrome
