feat(device) detect brand GOCLEVER model: Quantum 2 500 feat(device) detect brand S-TELL models: M461, M480 feat(device) detect brand Qumo models: Quest 410, Quest 408, Quest 509

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6290,7 +6290,7 @@ Vizio:
 
 # GOCLEVER
 GOCLEVER:
-  regex: 'GOCLEVER|QUANTUM_[0-9]{3}|QUANTUM [0-9]{1}|QUANTUM 700N|QUANTUM_(1010N|1010M|900)|ARIES|INSIGNIA|ORION_|ELIPSO|LIBRA[ _]97'
+  regex: 'GOCLEVER|QUANTUM_[0-9]{3}|QUANTUM [0-9]{1}|QUANTUM 700N|Quantum2 500|QUANTUM_(1010N|1010M|900)|ARIES|INSIGNIA|ORION_|ELIPSO|LIBRA[ _]97'
   device: 'smartphone'
   models:
     - regex: 'QUANTUM_(1010N|1010M|900)'
@@ -6305,6 +6305,8 @@ GOCLEVER:
     - regex: 'TQ700N'
       model: 'QUANTUM 700N'
       device: 'tablet'
+    - regex: 'Quantum2 500'
+      model: 'Quantum 2 500'
     - regex: '((?:QUANTUM|ARIES|INSIGNIA|ORION|ELIPSO)[ _-]?[^;/]+)(?: Build|\))'
       model: '$1'
     - regex: 'GOCLEVER[ _-]TAB[ _-]?([^;/]+) Build'
@@ -12686,8 +12688,8 @@ S-TELL:
   regex: 'S-TELL'
   device: 'smartphone'
   models:
-    - regex: 'M477'
-      model: 'M477'
+    - regex: '(?:S-TELL[ _])?M4(61|77|80)'
+      model: 'M4$1'
 
 # Safaricom
 Safaricom:
@@ -18495,7 +18497,7 @@ Atom:
 
 # Qumo
 Qumo:
-  regex: 'QUMO[ _]?|(?:Quest[ _]?(?:45[56]|50[67])|Vega[ _]?78[23]|Sirius[ _]?(?:1001|890))(?:[);/ ]|$)'
+  regex: 'QUMO[ _]?|(?:Quest[ _]?(?:408|410|45[56]|50[679])|Vega[ _]?78[23]|Sirius[ _]?(?:1001|890))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(?:QUMO[ _]?)?Vega[ _]?(78[23]|8002)(?:[);/ ]|$)'
@@ -18506,10 +18508,7 @@ Qumo:
       model: 'Sirius $1'
     - regex: '(?:QUMO)?(Sirius 101-4G 8GB Black|Altair 701 8GB Black|Altair 71 4GB Black|Altair 700[24]|Altair 706)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'QUMO[ _]Quest[ _]?(35[34]|40[26]|45[28]|47[46]|507|5[17]0|600)(?:[);/ ]|$)'
-      device: 'smartphone'
-      model: 'Quest $1'
-    - regex: 'Quest[ _]?(45[56]|50[67])(?:[);/ ]|$)'
+    - regex: '(?:QUMO[ _])?Quest[ _]?(35[34]|40[268]|410|45[2568]|47[46]|50[679]|5[17]0|600)(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Quest $1'
 
