--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3359,3 +3359,11 @@
     version: "77"
     engine: WebKit
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; KSA-LX9 Build/HONORKSA-LX9; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/86.0.4240.198 Mobile Midori Browser/1.2 Safari/537.36
+  client:
+    type: browser
+    name: Midori
+    version: "1.2"
+    engine: Blink
+    engine_version: ""
