feat(device) detect new brand 2F Mobile models: Z8 Plus, Z8 Pocket feat(device) detect new brand AURIS model: TB-703G feat(device) detect new brand YUHO models: O2, O2 Pro, Vast, Vast2, Vast Plus, Y1 Ace, Y1 Pro, Y1 Star, Y3 Pro, Y2 Pro, Y2, O1 Lite, O1, H2 Pro feat(device) detect brand Yu model: Yureka 2 (YU5551) feat(device) detect brand Karbonn model: Quattro L55 HD feat(device) detect brand Condor model: TB105L, TB717G feat(device) detect brand Torex model: S27 feat(device) detect brand Savio model: TB-G01

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4153,9 +4153,9 @@ ConCorde:
     - regex: 'ConCorde ([^/;]+) Build'
       model: '$1'
 
-# Condor
+# Condor (www.condor.dz)
 Condor:
-  regex: 'Allure (?:M[13]|X)|Griffe T[2356789]|TFX712G|TRA-901G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ519|PHQ52[056]|PKT\-301|Plume (?:H1|L[1-468]|P8|P6 PRO LTE))(?:[);/ ]|$)|CTAB[^/;]+ Build'
+  regex: 'Allure (?:M[13]|X)|Griffe T[2356789]|TFX712G|TRA-901G|TGW[-]?(710G|709)|(?:PGN\-?[456][012][0-9]|PHS\-601|PHQ519|PHQ52[056]|TB105L|TB717G|PKT\-301|Plume (?:H1|L[1-468]|P8|P6 PRO LTE))(?:[);/ ]|$)|CTAB[^/;]+ Build'
   device: 'smartphone'
   models:
     - regex: 'CTAB([^/;]+) Build'
@@ -4164,7 +4164,7 @@ Condor:
     - regex: '(TGW)-?(710G|709)(?:[);/ ]|$)'
       device: 'tablet'
       model: '$1 $2'
-    - regex: '(TFX712G)(?:[);/ ]|$)'
+    - regex: '(TFX712G|TB105L|TB717G)(?:[);/ ]|$)'
       device: 'tablet'
       model: '$1'
     - regex: '(TRA)-(901G)(?:[);/ ]|$)'
@@ -9922,7 +9922,7 @@ Konrow:
 
 # Karbonn (karbonnmobiles.com)
 Karbonn:
-  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ]Viraat[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura (?:Sleek Plus|Power 4G Plus|Note Play)|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S[15]|S200 HD|Frames S7|MOGHUL|S9)|K-lite F3|Sparkle V|Alfa A114 Quad'
+  regex: '(?:Browser-)?Karbonn|K9 Kavach 4G|K9[_ ]Viraat[_ ]Plus|K9 Music 4G|K9 Smart|K9 VIRAAT 4G|Aura (?:Sleek Plus|Power 4G Plus|Note Play)|Titanium[ _](?:3D-Plex|Octane Plus|Vista 4G|Jumbo|S360|S1[059]|S35|S20[13]|S22|S[15]|S200 HD|Frames S7|MOGHUL|S9)|K-lite F3|Sparkle V|Alfa A114 Quad|Quattro L55 HD'
   device: 'smartphone'
   models:
     - regex: 'K9 Kavach 4G'
@@ -9975,6 +9975,8 @@ Karbonn:
       model: 'K-Lite F3'
     - regex: 'Sparkle V'
       model: 'Sparkle V'
+    - regex: 'Quattro L55 HD'
+      model: 'Quattro L55 HD'
     - regex: 'Karbonn ([a-z0-9]+) WAP-Browser'
       model: '$1'
       device: 'feature phone'
@@ -16961,7 +16963,7 @@ Yezz:
 
 # Yu
 Yu:
-  regex: '(?:YU5[05]10[A]?|YU4711|AO5510|YU5050|YU501[14])(?:[);/ ]|$)'
+  regex: '(?:YU5[05]10[A]?|YU4711|AO5510|YU5050|YU501[14]|YU5551)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'YU5010[A]?(?:[);/ ]|$)'
@@ -16972,6 +16974,8 @@ Yu:
       model: 'Yutopia'
     - regex: 'AO5510(?:[);/ ]|$)'
       model: 'Yureka'
+    - regex: 'YU5551(?:[);/ ]|$)'
+      model: 'Yureka 2'
     - regex: 'YU5510[A]?(?:[);/ ]|$)'
       model: 'Yureka Plus'
     - regex: 'YU4711(?:[);/ ]|$)'
@@ -18248,7 +18252,7 @@ Starway:
 
 # Savio
 Savio:
-  regex: ' (TB-PO1|TB-B01)(?:[);/ ]|$)'
+  regex: ' (TB-PO1|TB-B01|TB-G01)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
@@ -19855,14 +19859,14 @@ iTruck:
   device: 'smartphone'
   model: '7.0" 3G'
 
-# Torex
+# Torex (torex.tools)
 Torex:
-  regex: 'TOREX[- ](?:PS12|S18)(?:[);/ ]|$)'
+  regex: 'TOREX[- ](?:PS12|S18|S27)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'TOREX-(PS12)'
       model: '$1'
-    - regex: 'TOREX[- ](S18)'
+    - regex: 'TOREX[- ](S18|S27)'
       device: 'smartphone'
       model: '$1'
 
@@ -22029,3 +22033,36 @@ Fantec:
   regex: 'FAN-M300H(?:[);/ ]|$)'
   device: 'smartphone'
   model: 'M300H'
+
+# AURIS Mobile (en.aurismobile.com.tr)
+AURIS:
+  regex: '(TB-703G)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
+# YUHO Mobile
+YUHO:
+  regex: 'YUHO_'
+  device: 'smartphone'
+  models:
+    - regex: 'YUHO_(O2|H2|Y[123])_PRO'
+      model: '$1 Pro'
+    - regex: 'YUHO_Vast_Plus'
+      model: 'Vast Plus'
+    - regex: 'YUHO_Y1_ACE'
+      model: 'Y1 Ace'
+    - regex: 'YUHO_Y1_STAR'
+      model: 'Y1 Star'
+    - regex: 'YUHO_O1_LITE'
+      model: 'O1 Lite'
+    - regex: 'YUHO_(Vast2?|O[12]|Y2)(?:[);/ ]|$)'
+      model: '$1'
+
+2F Mobile:
+  regex: '(Z8PLUS|Z8POCKET)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'Z8PLUS'
+      model: 'Z8 Plus'
+    - regex: 'Z8POCKET'
+      model: 'Z8 Pocket'
