--- a/Tests/fixtures/feature_phone.yml
+++ b/Tests/fixtures/feature_phone.yml
@@ -1376,8 +1376,7 @@
   os_family: Unknown
   browser_family: Unknown
 -
-  user_agent: SAGETEL60A_6464_11B_HW (MRE/3.1.00(1280);MAUI/_X2805_ARTEL_X5_V13_191224_MP;BDATE/2019/12/24 18:05;LCD/240320;CHIP/MT6260;KEY/Normal;TOUCH/0;CAMERA/1;SENSOR/0;DEV/SAGETEL60A_6464_11B_HW;WAP Browser/MAUI (HTTP PGDL;HTTPS)
-  ;GMOBI/001;MBOUNCE/002;MOMAGIC/003;
+  user_agent: SAGETEL60A_6464_11B_HW (MRE/3.1.00(1280);MAUI/_X2805_ARTEL_X5_V13_191224_MP;BDATE/2019/12/24 18:05;LCD/240320;CHIP/MT6260;KEY/Normal;TOUCH/0;CAMERA/1;SENSOR/0;DEV/SAGETEL60A_6464_11B_HW;WAP Browser/MAUI (HTTP PGDL;HTTPS);GMOBI/001;MBOUNCE/002;MOMAGIC/003;
   os:
     name: MRE
     version: "3.1"
