--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22061,6 +22061,7 @@ YUHO:
     - regex: 'YUHO_(Vast2?|O[12]|Y2)(?:[);/ ]|$)'
       model: '$1'
 
+# 2F Mobile
 2F Mobile:
   regex: '(Z8PLUS|Z8POCKET)(?:[);/ ]|$)'
   device: 'smartphone'
