fix: UNIT tests

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15915,7 +15915,7 @@ Venso:
   models:
     - regex: 'Isprit U50|Isprit-U50-LTE'
       model: 'Isprit U50'
-    - regex: '(?:CX-508|CX-551|Reiv 500|Creon F5'
+    - regex: '(CX-508|CX-551|Reiv 500|Creon F5)'
       model: '$1'
 
 # Verizon
