--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3034,10 +3034,10 @@ Brondi:
 
 # VGO TEL (vgotel.com)
 VGO TEL:
-  regex: '(?:Venture V(?:[278]|12)|Ocean[_ ][689]|Ocean9L)(?:[);/ ]|$)'
+  regex: '(?:Venture V(?:[278]|12)|VentureV10|Ocean[_ ][689]|Ocean9L)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'Venture V([278]|12)(?:[);/ ]|$)'
+    - regex: 'Venture ?V([278]|1[02])(?:[);/ ]|$)'
       model: 'Venture V$1'
     - regex: 'Ocean[_ ]?([689]|9L)(?:[);/ ]|$)'
       model: 'Ocean $1'
@@ -4423,7 +4423,7 @@ Cube:
 
 # CUBOT
 CUBOT:
-  regex: 'CUBOT|RAINBOW 2|KING_KONG_3|ZORRO 001|KINGKONG[_ ]MINI2?|KING KONG CS|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?|NOTE 20 PRO'
+  regex: 'CUBOT|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?|(?:NOTE 20 PRO|RAINBOW 2|KING_KONG_3|ZORRO 001|KINGKONG[_ ]MINI2?|KING KONG CS|R15_PRO)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'CHEETAH 2'
@@ -4462,6 +4462,8 @@ CUBOT:
       model: 'Note Plus'
     - regex: 'NOTE 20 PRO'
       model: 'Note 20 Pro'
+    - regex: 'R15_PRO'
+      model: 'R15 Pro'
     - regex: 'CUBOT[_ ]NOTE[_ ]S'
       model: 'Note S'
     - regex: 'CUBOT_NOVA'
@@ -4627,12 +4629,12 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[123]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260|GS15[035]| (?:N280i|P380i|R110|BL160|B450|B340|A1[45]0|A340|AS160|GL[23]55|ES750))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[123]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260|GS15[035]| (?:N280i|P380i|R110|BL160|B450|B340|B355|T155|A1[45]0|A340|AS160|GL[23]55|ES750|XL150|S280|Z[34]55))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
       model: 'Ixion $1'
-    - regex: '(ML450|MS[56]50|ES750)(?:[);/ ]|$)'
+    - regex: '(ML450|MS[56]50|ES750|XL150)(?:[);/ ]|$)'
       model: 'Ixion $1'
     - regex: 'IxionES250(?:[);/ ]|$)'
       model: 'Ixion ES250 Rage'
@@ -4653,11 +4655,11 @@ DEXP:
     - regex: 'Ursus ([^;/)]+)(?: Build|\))'
       model: 'Ursus $1'
       device: 'tablet'
-    - regex: '(VA[21]10|VA170|R110|N280i|P380i)(?:[);/ ]|$)'
+    - regex: '(VA[21]10|VA170|R110|N280i|P380i|S280)(?:[);/ ]|$)'
       model: 'Ursus $1'
       device: 'tablet'
 
-    - regex: ' (B450|B340|BL160|A340)(?:[);/ ]|$)'
+    - regex: ' (B450|B340|B355|BL160|A340|T155|Z[34]55)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'SENIOR(?:[);/ ]|$)'
       model: 'Senior'
@@ -8769,7 +8771,7 @@ AIS:
 
 # Lava (Lavamobiles.com)
 Lava:
-  regex: 'Lava[ _]|LAVAA1|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Pixel V2|Z61_2GB|A97 IPS|A97 2GB PLUS|L[EH]9920(?:[_ ]P)?|L[NEH]9910|LH9810|Ivory(?:S1|S4G)?|A76Plus)(?:[);/ ]|$)'
+  regex: 'Lava[ _]|LAVAA1|(?:DISCOVER136|KKT QUADRA)|iris[ _]?([^/;]+)(?:\)| Build)|A(?:67|76) Build|X1 Selfie Build|X41 Plus Build|(?:Flair Z1|PixelV1|Pixel V2|Z60s|Z61_2GB|A97 IPS|A97 2GB PLUS|L[EH]9920(?:[_ ]P)?|L[NEH]9910|LH9810|Ivory(?:S1|S4G)?|A76Plus)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -8793,6 +8795,8 @@ Lava:
       model: 'R1'
     - regex: 'Z61_2GB(?:[);/ ]|$)'
       model: 'Z61'
+    - regex: 'Z60s(?:[);/ ]|$)'
+      model: 'Z60s'
     - regex: 'LE9920[ _]P(?:[);/ ]|$)'
       model: 'V7'
     - regex: 'LE9920(?:[);/ ]|$)'
@@ -12216,12 +12220,15 @@ Overmax:
 
 # Oysters
 Oysters:
-  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific[ ]?800i|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G|T104MBi_3G|T104SCi_3G|T104ER4G|Atlantic4G|AntarcticE|T7V 3G'
+  regex: 'Oysters|T84ERI[ _]3G|T72HM(s_)?3G|T102MS_3G|T102ER3G|(T74HMi|T84Bi)[_ ]4G|T74MR4G|T84Ni[_ ][34]G|Pacific(?:[ ]?800i|E)|T104B_[34]G|IndianV|T72HA_3G|T74D_3G|T74N_3G|T74SC_3G|T74Mai_3G|T104MBi_3G|T104SCi_3G|T104ER4G|Atlantic4G|AntarcticE|T7V 3G'
   device: 'tablet'
   models:
     - regex: 'Pacific[ ]?800i'
       device: 'smartphone'
       model: 'Pacific 800i'
+    - regex: 'PacificE'
+      device: 'smartphone'
+      model: 'Pacific E'
     - regex: 'Atlantic4G'
       device: 'smartphone'
       model: 'Atlantic 4G'
@@ -17662,7 +17669,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE V808|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:V0820|L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|65[19]J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:5151V|610DL|6400C|6410S|233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|992|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|V769M|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade[ _](A510|A[357] 2019-T|A6 MAX|A0622|X9)|Z3153V|Z836F|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01[JK]|Z963U|402ZT|P545|P609|dandelion|901ZT|A001ZT|Z-01K|UZTE V808|ZR01|ZTG01|K8[37]CA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -17714,6 +17721,8 @@ ZTE:
       model: 'V5'
     - regex: 'N9510(?:[);/ ]|$)'
       model: 'Warp 4G'
+    - regex: 'Z5151V(?:[);/ ]|$)'
+      model: 'Visible R2'
     - regex: 'N9517(?:[);/ ]|$)'
       model: 'Blade Force'
     - regex: 'Z559DL(?:[);/ ]|$)'
@@ -17930,6 +17939,10 @@ ZTE:
       model: 'Obsidian'
     - regex: 'Z986U'
       model: 'Blade Max 3'
+    - regex: 'Z6410S'
+      model: 'Blade Max 2s'
+    - regex: 'Z610DL'
+      model: 'Blade Max View'
     - regex: 'Z971'
       model: 'Blade Spark'
     - regex: 'Z978'
@@ -17942,6 +17955,8 @@ ZTE:
       model: 'Unico LTE'
     - regex: 'Z965'
       model: 'Blade X'
+    - regex: 'Z6400C'
+      model: 'Blade X2 Max'
     - regex: 'Z981'
       model: 'Blade Z Max Pro'
     - regex: 'Z982'
@@ -19038,9 +19053,9 @@ Wigor:
   device: 'smartphone'
   model: '$1'
 
-# NEXON
+# NEXON (nexon.ua)
 NEXON:
-  regex: 'NEXON (X[1589])(?:[);/ ]|$)'
+  regex: 'NEXON (X[12589])(?:[);/ ]|$)'
   device: 'tv'
   model: '$1'
 
@@ -19539,7 +19554,7 @@ Tone:
 
 # AT&T
 AT&T:
-  regex: '(?:U304AA|QS5509A|U705AA)(?:[);/ ]|$)'
+  regex: '(?:U304AA|QS5509A|U705AA|U318AA)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'U304AA(?:[);/ ]|$)'
@@ -19548,6 +19563,8 @@ AT&T:
       model: 'Radiant Max'
     - regex: 'QS5509A(?:[);/ ]|$)'
       model: 'Axia'
+    - regex: 'U318AA(?:[);/ ]|$)'
+      model: 'Calypso'
 
 # BIHEE
 BIHEE:
@@ -19777,11 +19794,13 @@ Tele2:
 
 # Alfawise
 Alfawise:
-  regex: '(?:Alfawise (?:A9)|(?:A95X_R1))(?:[);/ ]|$)'
+  regex: '(?:Alfawise (?:A9)|(?:A95X_R1|Z28Pro))(?:[);/ ]|$)'
   device: 'tv'
   models:
     - regex: '(A95X_R1)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'Z28Pro(?:[);/ ]|$)'
+      model: 'Z28 Pro'
     - regex: 'Alfawise (A9)'
       model: '$1'
 
@@ -19981,7 +20000,7 @@ Vsmart:
 
 # MiXzo
 MiXzo:
-  regex: '(?:MiXzo[ _])?(?:ME1023|ME1030|MX1037|MX1024|MX10[24]1|MX1397)([ _][34]G)?(?:[);/ ]|$)'
+  regex: '(?:MiXzo[ _])?(?:ME1023|ME ?1025|ME1030|MX1037|MX1024|MX10[24]1|MX1397)([ _][34]G)?(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'MiXzo[_ ]ME(1023|1030)(?:[_ ]3G)(?:[);/ ]|$)'
@@ -19990,6 +20009,8 @@ MiXzo:
       model: 'MX1021 3G'
     - regex: '(?:MiXzo[ _])?MX(1037|1041|1024|1397)[ _]4G(?:[);/ ]|$)'
       model: 'MX$1 4G'
+    - regex: 'ME ?1025'
+      model: 'ME1025 3G'
 
 # Openbox
 Openbox:
@@ -22070,3 +22091,9 @@ YUHO:
       model: 'Z8 Plus'
     - regex: 'Z8POCKET'
       model: 'Z8 Pocket'
+
+# Zaith
+Zaith:
+  regex: '(Z3211G)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
