feat(device) detect new brand Bleck models: BE xl, BE se, BE o2, BE fr, BE et, BE dg, BE clever 7.0" (BL-919845)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -22114,3 +22114,14 @@ Vega:
   regex: 'Vega (Q7128)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
+
+# Bleck (www.bleck.com.mx)
+Bleck:
+  regex: '(?:BE_(xl|se|o2|fr|et|dg)|BL-919845)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'BE_(xl|se|o2|fr|et|dg)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'BL-919845'
+      device: 'tablet'
+      model: 'BE clever 7.0"'
