fix: fixed model name OCTA-CORE T8 for brand Allwinner

--- a/Tests/fixtures/car_browser.yml
+++ b/Tests/fixtures/car_browser.yml
@@ -140,7 +140,7 @@
   device:
     type: car browser
     brand: Allwinner
-    model: QUAD-CORE T8
+    model: OCTA-CORE T8
   os_family: Android
   browser_family: Chrome
 -
