--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2051,7 +2051,7 @@ Allwinner:
       model: 'QUAD-CORE T3 K2001M'
     - regex: 'OCTA-CORE T8'
       device: 'car browser'
-      model: 'QUAD-CORE T8'
+      model: 'OCTA-CORE T8'
 
 # altron
 altron:
