feat(device) detect brand AllDocube model: iPlay 30 feat(device) detect brand Xiaomi model: Redmi 9C (M2006C3MT) feat(device) detect brand Blu model: C5L (2020) feat(device) detect brand Blackview model: BV6600 feat(device) detect brand OPPO model: Reno 5 5G (PEGM00) feat(device) detect brand Vivo model: Y72 5G (V2041) feat(device) detect brand Realme models: Q2 Pro (RMX2173), GT 5G (RMX2202), 8 (RMX3085), feat(device) detect brand Motorola models: Moto E7 Plus, Moto E7, Moto G9 Power, Moto Z2
feat(device) rename model for brand OPPO: A1K => A1k
feat(device) rename model for brand OPPO: Reno 5G (CPH1925) => A1s

--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -1256,7 +1256,7 @@
   device:
     type: smartphone
     brand: OPPO
-    model: Reno 5G
+    model: A1s
   os_family: Android
   browser_family: Chrome
 - 
