feat(device) detect brand Allwinner model: OCTOPUS-CORE T8 feat(device) detect brand Vernee model: M7 feat(device) detect brand Teclast model: P10HD

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2060,7 +2060,7 @@ Allview:
 
 # Allwinner
 Allwinner:
-  regex: '(?:QUAD-CORE (?:A64 p3|A33 y3|T3 K2001M)|ZY-07B|UltraOcta-T8|OCTA-CORE T8)(?:[);/ ]|$)'
+  regex: '(?:QUAD-CORE (?:A64 p3|A33 y3|T3 K2001M)|ZY-07B|UltraOcta-T8|OCTA-CORE T8|OCTOPUS-CORE T8)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'QUAD-CORE A64 p3'
@@ -2078,6 +2078,9 @@ Allwinner:
     - regex: 'OCTA-CORE T8'
       device: 'car browser'
       model: 'OCTA-CORE T8'
+    - regex: 'OCTOPUS-CORE T8'
+      device: 'car browser'
+      model: 'OCTOPUS-CORE T8'
 
 # altron
 altron:
@@ -15200,7 +15203,7 @@ T-Mobile:
 
 # Teclast (teclast.com)
 Teclast:
-  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80X|P20HD|P10_HD|M40)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
+  regex: 'Teclast|TLA002|TLA016|X98 Air III|M20_4G|X98 Air II\(HG5N\)|Tbook|X80 Power\(B2N4\)|(?:T30|P80X|P20HD|P10[_ ]HD|M40)_(?:ROW|EEA)|T10\(E3C6\)|P10S\(N4H5\)|98\(M1E[45789]\)|98\(M3E3\)'
   device: 'tablet'
   models:
     - regex: 'Tbook[_ -]([^;/]+) Build'
@@ -15217,7 +15220,7 @@ Teclast:
       model: 'P20HD'
     - regex: 'M40_(?:ROW|EEA)'
       model: 'M40'
-    - regex: 'P10_HD_(?:ROW|EEA)'
+    - regex: 'P10[_ ]HD_(?:ROW|EEA)'
       model: 'P10HD'
     - regex: 'M20_4G'
       model: 'M20 4G'
@@ -15907,7 +15910,7 @@ VK Mobile:
 
 # Vernee
 Vernee:
-  regex: 'Vernee|Mars Pro|Apollo[ _](?:Lite|X)|Thor (?:E|Plus)|X2_euro'
+  regex: 'Vernee|Mars Pro|Apollo[ _](?:Lite|X)|Thor (?:E|Plus)|X2_euro|M7_EEA'
   device: 'smartphone'
   models:
     - regex: 'Apollo[ _]Lite'
@@ -15922,6 +15925,8 @@ Vernee:
       model: 'Thor Plus'
     - regex: 'Vernee_M5'
       model: 'M5'
+    - regex: 'M7_EEA'
+      model: 'M7'
     - regex: 'X2_euro'
       model: 'X2'
     - regex: 'Vernee[ _-]([^;/]+) Build'
