--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4769,3 +4769,39 @@
     model: P10HD
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 7.0; H170) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.135 YaBrowser/20.8.1.71.01 Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 20.8.1.71.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: DEXP
+    model: Ursus H170
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; arm; Android 8.1.0; P510) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.182 YaBrowser/21.2.0.223.01 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.2.0.223.01
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: DEXP
+    model: Ursus P510
+  os_family: Android
+  browser_family: Unknown
