Adds detection for Binance mobile app
User agent can be seen on Menu > Settings > Network Test

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -537,3 +537,8 @@
 - regex: 'JaneStyle_iOS/(\d+[\.\d]+)'
   name: 'JaneStyle'
   version: '$1'
+
+# Binance https://play.google.com/store/apps/details?id=com.binance.dev
+- regex: 'BNC/.+\(Android (\d+[\.\d]+)\)'
+  name: 'Binance'
+  version: '$1'
