--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -539,3 +539,9 @@
     type: mobile app
     name: TVirl
     version: 0.3.2.2
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; JNY-LX1 Build/HUAWEIJNY-L21; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 Mobile Safari/537.36 BNC/1.7.0 (Android 1.39.4)
+  client:
+    type: mobile app
+    name: Binance
+    version: 1.39.4
