--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -8124,3 +8124,39 @@
     model: Brown 1
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; BL155) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 90.0.4430.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DEXP
+    model: BL155
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; A160) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.91 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 90.0.4430.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DEXP
+    model: A160
+  os_family: Android
+  browser_family: Chrome
