feat(app) detect app My World

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -539,3 +539,9 @@
     type: mobile app
     name: TVirl
     version: 0.3.2.2
+-
+  user_agent: ru.mail.my/2.8.15 (iOS 14.4; iPhone; Scale/2); mmMobileClient
+  client:
+    type: mobile app
+    name: My World
+    version: 2.8.15
