--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -537,3 +537,8 @@
 - regex: 'JaneStyle_iOS/(\d+[\.\d]+)'
   name: 'JaneStyle'
   version: '$1'
+
+# My World https://apps.apple.com/app/id598556821
+- regex: 'ru\.mail\.my/(\d+[\.\d]+)'
+  name: 'My World'
+  version: '$1'
