feat(device) detect brand Cloudfone model: Cloudfone feat(device) detect brand Bitmore models: ColorTab 10 II, ColorTab 10, ColorTab 10M, ColorTab 816i

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19128,13 +19128,15 @@ PocketBook:
 
 # Bitmore
 Bitmore:
-  regex: '(?:Mobitab10c-3G|Tab1011Q_II)(?:[);/ ]|$)'
+  regex: '(?:Mobitab10c-3G|Tab1011Q_II|Colortab[ _]?(10(?:M| II)?|816i))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(Mobitab)(10)c-3G(?:[);/ ]|$)'
       model: '$1 $2C 3G'
     - regex: 'Tab1011Q_II(?:[);/ ]|$)'
       model: 'Tab1011Q II'
+    - regex: 'Colortab[ _]?(10(?:M| II)?|816i)(?:[);/ ]|$)'
+      model: 'ColorTab $1'
 
 # Kuliao
 Kuliao:
@@ -19959,7 +19961,7 @@ Cloudpad:
 
 # Cloudfone
 Cloudfone:
-  regex: '(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro|NBA Edition)(?:[);/ ]|$)'
+  regex: 'CloudFone[ _]|(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro|NBA Edition)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Thrill Boost (2|3)(?:[);/ ]|$)'
@@ -19974,6 +19976,8 @@ Cloudfone:
       model: 'Excite Prime 2 Pro'
     - regex: 'NBA Edition(?:[);/ ]|$)'
       model: 'NBA Edition'
+    - regex: 'Next(?:[);/ ]|$)'
+      model: 'Next'
 
 # Vsmart
 Vsmart:
