feat(device) detect brand Tecno Mobile models: Phantom 9 (AB7), Spark 4 (KC2j)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15220,6 +15220,8 @@ Tecno Mobile:
       model: 'Phantom 6 Plus'
     - regex: 'Phantom6'
       model: 'Phantom 6'
+    - regex: 'TECNO[ _]AB7(?:[);/ ]|$)'
+      model: 'Phantom 9'
     - regex: 'TECNO-W3'
       model: 'W3'
     - regex: 'TECNO[ _]F4 Pro(?:[);/ ]|$)'
@@ -15248,7 +15250,7 @@ Tecno Mobile:
       model: 'Camon 12 Air'
     - regex: 'Tecno[ _]CC7(?:[);/ ]|$)'
       model: 'Camon 12'
-    - regex: 'Tecno[ _]KC8(?:[);/ ]|$)'
+    - regex: 'Tecno[ _](?:KC8|KC2j)(?:[);/ ]|$)'
       model: 'Spark 4'
     - regex: 'Tecno[ _]BB4k(?:[);/ ]|$)'
       model: 'Spark 4 Lite'
