feat(device) detect brand Mpman models: MPQCG10 3G, MPQCG11, MPQCG77

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10032,14 +10032,16 @@ Coby Kyros:
 
 # Mpman (mpmaneurope.com)
 Mpman:
-  regex: '(?:MPQC|MPDC)[0-9]+|PH(?:150|340|350|360|451|500|520|544|604)|(?:MID(?:7C|74C|82C|84C|801|811|701|711|170|77C|43C|102C|103C|104C|114C)|MP100i OCTA|MP(?:843|717|718|1010|7007|7008|843|888|959|969)|MGP7)(?:[);/ ]|$)'
+  regex: '(?:MPQC|MPDC)[0-9]+|PH(?:150|340|350|360|451|500|520|544|604)|(?:MID(?:7C|74C|82C|84C|801|811|701|711|170|77C|43C|102C|103C|104C|114C)|MP100i OCTA|MP(?:843|717|718|1010|7007|7008|843|888|959|969|QCG(1[01]|77)(?: 3G)?)|MGP7)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '((?:MPQC|MPDC)[0-9]+[^/;)]+)(?: Build|\))'
       model: '$1'
     - regex: 'MP100i OCTA(?:[);/ ]|$)'
       model: 'MP100i OCTA'
-    - regex: '(MID(?:7C|74C|82C|84C|801|811|701|711|170|77C|43C|102C|103C|104C|114C)|MP(?:843|717|718|1010|7007|7008|843|888|959|969)|MGP7)(?:[);/ ]|$)'
+    - regex: 'MPQCG10(?: 3G)?(?:[);/ ]|$)'
+      model: 'MPQCG10 3G'
+    - regex: '(MID(?:7C|74C|82C|84C|801|811|701|711|170|77C|43C|102C|103C|104C|114C)|MP(?:843|717|718|1010|7007|7008|843|888|959|969|QCG(?:11|77))|MGP7)(?:[);/ ]|$)'
       model: '$1'
     - regex: '(PH(?:150|340|350|360|451|500|520|544|604))'
       model: '$1'
