feat(device) detect brand EXO models: Wave i007B, Wave i007

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19075,9 +19075,9 @@ ONN:
   device: 'tablet'
   model: '$1'
 
-# EXO S.A
+# EXO S.A (exo.com.ar)
 EXO:
-  regex: '(Wave_i101G|Wave i101[Hb])(?:[);/ ]|$)'
+  regex: '(?:EXO_)?(Wave_i101G|Wave_i007B?|Wave i101[Hb])(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
