fix: tests re(2)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9588,7 +9588,7 @@ LG:
       model: 'LM-X410'
     - regex: 'LM-X420N'
       model: 'X4 (2019)'
-    - regex: '(,ЖLG-X230|VS425)(?:[);/ ]|$)'
+    - regex: '(?:LG-X230|VS425)(?:[);/ ]|$)'
       model: 'K4'
     - regex: 'LM-X420'
       model: 'K40'
