feat(app) detect app LinkedIn

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -245,7 +245,7 @@
   name: 'Siri'
   version: '1.0'
 
-- regex: 'LinkedIn/([\d\.]+)'
+- regex: 'LinkedIn(?:App)?(?:/([\d\.]+))?'
   name: 'LinkedIn'
   version: '$1'
 
