--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -234,6 +234,18 @@
     name: LinkedIn
     version: "9.7.1681"
 -
+  user_agent: Mozilla/5.0 (Linux; Android 10; Redmi Note 8 Pro Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.141 Mobile Safari/537.36 [LinkedInApp]
+  client:
+    type: mobile app
+    name: LinkedIn
+    version: ""
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 [LinkedInApp]
+  client:
+    type: mobile app
+    name: LinkedIn
+    version: ""
+-
   user_agent: Twitter/7.57 CFNetwork/978.0.7 Darwin/18.7.0
   client:
     type: mobile app
